Fix vertical align cards

--- a/mviewer/maddog/addons/maddog/css/template.css
+++ b/mviewer/maddog/addons/maddog/css/template.css
@@ -228,15 +228,6 @@ h4.submodal-title {
 	padding: 10px 0 15px;
 }
 
-.icon-suivi {
-	width: 60px;
-}
-
-.block-icon {
-	text-align: center;
-	padding: 10px 0 15px;
-}
-
 #selectWPS .blockCards {
     margin-top:20px;
 }
